# ha-temporary

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LINTING_SETUP.md  PLAN.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  hacs.json  pyproject.toml  requirements_dev.txt  validate.py
.github/: copilot-instructions.md
custom_components/temporary/: __init__.py  config_flow.py  const.py  entity.py  manager.py  manifest.json  services.yaml  strings.json  timer.py
