[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ha-temporary"
version = "1.0.0"
description = "Home Assistant Temporary Entities Integration"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "Your Name", email = "your.email@example.com" }]
keywords = ["home assistant", "temporary", "entities"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation",
]

[tool.ruff]
required-version = ">=0.15.0"
target-version = "py314"


[tool.ruff.lint]
select = [
    "A001",   # Variable {name} is shadowing a Python builtin
    "ASYNC",  # flake8-async
    "B002",   # Python does not support the unary prefix increment
    "B005",   # Using .strip() with multi-character strings is misleading
    "B007",   # Loop control variable {name} not used within loop body
    "B009",   # Do not call getattr with a constant attribute value. It is not any safer than normal property access.
    "B014",   # Exception handler with duplicate exception
    "B015",   # Pointless comparison. Did you mean to assign a value? Otherwise, prepend assert or remove it.
    "B017",   # pytest.raises(BaseException) should be considered evil
    "B018",   # Found useless attribute access. Either assign it to a variable or remove it.
    "B023",   # Function definition does not bind loop variable {name}
    "B024",   # `{name}` is an abstract base class, but it has no abstract methods or properties
    "B025",   # try-except* block with duplicate exception {name}
    "B026",   # Star-arg unpacking after a keyword argument is strongly discouraged
    "B032",   # Possible unintentional type annotation (using :). Did you mean to assign (using =)?
    "B035",   # Dictionary comprehension uses static key
    "B904",   # Use raise from to specify exception cause
    "B905",   # zip() without an explicit strict= parameter
    "BLE",
    "C",      # complexity
    "COM818", # Trailing comma on bare tuple prohibited
    "D",      # docstrings
    "DTZ003", # Use datetime.now(tz=) instead of datetime.utcnow()
    "DTZ004", # Use datetime.fromtimestamp(ts, tz=) instead of datetime.utcfromtimestamp(ts)
    "E",      # pycodestyle
    "F",      # pyflakes/autoflake
    "F541",   # f-string without any placeholders
    "FLY",    # flynt
    "FURB",   # refurb
    "G",      # flake8-logging-format
    "I",      # isort
    "INP",    # flake8-no-pep420
    "ISC",    # flake8-implicit-str-concat
    "ICN001", # import concentions; {name} should be imported as {asname}
    "LOG",    # flake8-logging
    "N804",   # First argument of a class method should be named cls
    "N805",   # First argument of a method should be named self
    "N815",   # Variable {name} in class scope should not be mixedCase
    "PERF",   # Perflint
    "PGH",    # pygrep-hooks
    "PIE",    # flake8-pie
    "PL",     # pylint
    "PT",     # flake8-pytest-style
    "PTH",    # flake8-pathlib
    "PYI",    # flake8-pyi
    "RET",    # flake8-return
    "RSE",    # flake8-raise
    "RUF005", # Consider iterable unpacking instead of concatenation
    "RUF006", # Store a reference to the return value of asyncio.create_task
    "RUF007", # Prefer itertools.pairwise() over zip() when iterating over successive pairs
    "RUF008", # Do not use mutable default values for dataclass attributes
    "RUF010", # Use explicit conversion flag
    "RUF013", # PEP 484 prohibits implicit Optional
    "RUF016", # Slice in indexed access to type {value_type} uses type {index_type} instead of an integer
    "RUF017", # Avoid quadratic list summation
    "RUF018", # Avoid assignment expressions in assert statements
    "RUF019", # Unnecessary key check before dictionary access
    "RUF020", # {never_like} | T is equivalent to T
    "RUF021", # Parenthesize a and b expressions when chaining and and or together, to make the precedence clear
    "RUF022", # Sort __all__
    "RUF023", # Sort __slots__
    "RUF024", # Do not pass mutable objects as values to dict.fromkeys
    "RUF026", # default_factory is a positional-only argument to defaultdict
    "RUF030", # print() call in assert statement is likely unintentional
    "RUF032", # Decimal() called with float literal argument
    "RUF033", # __post_init__ method with argument defaults
    "RUF034", # Useless if-else condition
    "RUF059", # unused-unpacked-variable
    "RUF100", # Unused `noqa` directive
    "RUF101", # noqa directives that use redirected rule codes
    "RUF200", # Failed to parse pyproject.toml: {message}
    "S102",   # Use of exec detected
    "S103",   # bad-file-permissions
    "S108",   # hardcoded-temp-file
    "S306",   # suspicious-mktemp-usage
    "S307",   # suspicious-eval-usage
    "S313",   # suspicious-xmlc-element-tree-usage
    "S314",   # suspicious-xml-element-tree-usage
    "S315",   # suspicious-xml-expat-reader-usage
    "S316",   # suspicious-xml-expat-builder-usage
    "S317",   # suspicious-xml-sax-usage
    "S318",   # suspicious-xml-mini-dom-usage
    "S319",   # suspicious-xml-pull-dom-usage
    "S601",   # paramiko-call
    "S602",   # subprocess-popen-with-shell-equals-true
    "S604",   # call-with-shell-equals-true
    "S608",   # hardcoded-sql-expression
    "S609",   # unix-command-wildcard-injection
    "SIM",    # flake8-simplify
    "SLF",    # flake8-self
    "SLOT",   # flake8-slots
    "T100",   # Trace found: {name} used
    "T20",    # flake8-print
    "TC",     # flake8-type-checking
    "TID",    # Tidy imports
    "TRY",    # tryceratops
    "UP",     # pyupgrade
    "UP031",  # Use format specifiers instead of percent format
    "UP032",  # Use f-string instead of `format` call
    "W",      # pycodestyle
]

ignore = [
    "ASYNC109", # Async function definition with a `timeout` parameter Use `asyncio.timeout` instead
    "ASYNC110", # Use `asyncio.Event` instead of awaiting `asyncio.sleep` in a `while` loop
    "ASYNC240", # Use an async function for entering the file system
    "D202",     # No blank lines allowed after function docstring
    "D203",     # 1 blank line required before class docstring
    "D213",     # Multi-line docstring summary should start at the second line
    "D406",     # Section name should end with a newline
    "D407",     # Section name underlining
    "D417",     # Missing argument descriptions in docstring - to allow documenting only non-obvious parameters
    "E501",     # line too long

    "PLC1901", # {existing} can be simplified to {replacement} as an empty string is falsey; too many false positives
    "PLR0911", # Too many return statements ({returns} > {max_returns})
    "PLR0912", # Too many branches ({branches} > {max_branches})
    "PLR0913", # Too many arguments to function call ({c_args} > {max_args})
    "PLR0915", # Too many statements ({statements} > {max_statements})
    "PLR2004", # Magic value used in comparison, consider replacing {value} with a constant variable
    "PLW0108", # Unnecessary lambda wrapping a function call; can often be replaced by the function itself
    "PLW1641", # __eq__ without __hash__
    "PLW2901", # Outer {outer_kind} variable {name} overwritten by inner {inner_kind} target
    "PT011",   # pytest.raises({exception}) is too broad, set the `match` parameter or use a more specific exception
    "PT018",   # Assertion should be broken down into multiple parts
    "RUF001",  # String contains ambiguous unicode character.
    "RUF002",  # Docstring contains ambiguous unicode character.
    "RUF003",  # Comment contains ambiguous unicode character.
    "RUF015",  # Prefer next(...) over single element slice
    "SIM102",  # Use a single if statement instead of nested if statements
    "SIM103",  # Return the condition {condition} directly
    "SIM108",  # Use ternary operator {contents} instead of if-else-block
    "SIM115",  # Use context handler for opening files

    # Moving imports into type-checking blocks can mess with pytest.patch()
    "TC001", # Move application import {} into a type-checking block
    "TC002", # Move third-party import {} into a type-checking block
    "TC003", # Move standard library import {} into a type-checking block
    # Quotes for typing.cast generally not necessary, only for performance critical paths
    "TC006", # Add quotes to type expression in typing.cast()

    "TRY003", # Avoid specifying long messages outside the exception class
    "TRY400", # Use `logging.exception` instead of `logging.error`

    "UP046", # Non PEP 695 generic class
    "UP047", # Non PEP 696 generic function
    "UP049", # Avoid private type parameter names

    # May conflict with the formatter, https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q",
    "COM812",
    "COM819",

    # Disabled because ruff does not understand type of __all__ generated by a function
    "PLE0605",

    "FURB116",
]


[tool.ruff.lint.flake8-import-conventions.extend-aliases]
voluptuous = "vol"
"homeassistant.helpers.area_registry" = "ar"
"homeassistant.helpers.category_registry" = "cr"
"homeassistant.helpers.config_validation" = "cv"
"homeassistant.helpers.device_registry" = "dr"
"homeassistant.helpers.entity_registry" = "er"
"homeassistant.helpers.floor_registry" = "fr"
"homeassistant.helpers.issue_registry" = "ir"
"homeassistant.helpers.label_registry" = "lr"
"homeassistant.util.color" = "color_util"
"homeassistant.util.dt" = "dt_util"
"homeassistant.util.json" = "json_util"
"homeassistant.util.location" = "location_util"
"homeassistant.util.logging" = "logging_util"
"homeassistant.util.network" = "network_util"
"homeassistant.util.ulid" = "ulid_util"
"homeassistant.util.uuid" = "uuid_util"
"homeassistant.util.yaml" = "yaml_util"

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"async_timeout".msg = "use asyncio.timeout instead"
"pytz".msg = "use zoneinfo instead"

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["homeassistant"]
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D100",    # Missing docstring in public module
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "D104",    # Missing docstring in public package
    "S101",    # Use of assert detected
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value used in comparison
    "TRY002",  # Create your own exception
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pylint.MASTER]
py-version = "3.12"
persistent = false
extension-pkg-allow-list = ["ciso8601", "orjson"]
fail-on = ["I"]

[tool.pylint.BASIC]
class-const-naming-style = "any"

[tool.pylint."MESSAGES CONTROL"]
# Reasons disabled:
# format - handled by ruff
# duplicate-code - unavoidable
# invalid-name - doesn't match Home Assistant conventions
# too-many-* - too many false positives
# too-few-* - too many false positives
disable = [
    "format",
    "duplicate-code",
    "invalid-name",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "too-few-public-methods",
    "wrong-import-order",
    "consider-using-f-string",
    "use-implicit-booleaness-not-comparison",
]

[tool.pylint.REPORTS]
score = false

[tool.pylint.FORMAT]
expected-line-ending-format = "LF"

[tool.pylint.EXCEPTIONS]
overgeneral-exceptions = ["builtins.BaseException", "builtins.Exception"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git"]
log_format = "%(asctime)s.%(msecs)03d %(levelname)-8s %(threadName)s %(name)s:%(filename)s:%(lineno)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["custom_components/temporary"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@overload",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.12"
show_error_codes = true
follow_imports = "normal"
local_partial_types = true
strict_equality = true
no_implicit_optional = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_reexport = true
warn_return_any = true
warn_unreachable = true
strict = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["voluptuous.*"]
ignore_missing_imports = true
